# redakt

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
SDD/: README.md
SDD/prompts/: PROMPT-001-pii-detection-2026-03-28.md  PROMPT-002-anonymize-deanonymize-2026-03-28.md  PROMPT-003-document-support-2026-03-29.md  PROMPT-004-language-detection-2026-03-29.md  PROMPT-005-allow-lists-2026-03-29.md  PROMPT-006-audit-logging-2026-03-29.md
SDD/requirements/: SPEC-001-pii-detection.md  SPEC-002-anonymize-deanonymize.md  SPEC-003-document-support.md  SPEC-004-language-detection.md  SPEC-005-allow-lists.md  SPEC-006-audit-logging.md
SDD/research/: RESEARCH-001-pii-detection.md  RESEARCH-002-anonymize-deanonymize.md  RESEARCH-003-document-support.md  RESEARCH-004-language-detection.md  RESEARCH-005-allow-lists.md  RESEARCH-006-audit-logging.md
SDD/reviews/: CRITICAL-IMPL-allow-lists-20260329.md  CRITICAL-IMPL-anonymize-deanonymize-20260328.md  CRITICAL-IMPL-audit-logging-20260329.md  CRITICAL-IMPL-document-support-20260329.md  CRITICAL-IMPL-language-detection-20260329.md  CRITICAL-IMPL-pii-detection-20260328.md  CRITICAL-RESEARCH-allow-lists-20260329.md  CRITICAL-RESEARCH-anonymize-deanonymize-20260328.md  CRITICAL-RESEARCH-audit-logging-20260329.md  CRITICAL-RESEARCH-document-support-20260329.md  CRITICAL-RESEARCH-language-detection-20260329.md  CRITICAL-RESEARCH-pii-detection-20260327.md  CRITICAL-SPEC-allow-lists-20260329.md  CRITICAL-SPEC-anonymize-deanonymize-20260328.md  CRITICAL-SPEC-audit-logging-20260329.md  (+7 more)
docs/: presidio-integration.md  v1-feature-spec.md
tests/: conftest.py  test_allow_list_utils.py  test_allow_list_web.py  test_anonymize_api.py  test_anonymizer_service.py  test_audit.py  test_audit_integration.py  test_deanonymize_api.py  test_detect.py  test_document_processor.py  test_documents_api.py  test_extractors.py  test_health.py  test_language.py  test_pages.py  test_presidio_client.py
(+48 files in other folders)
