[project]
name = "redakt"
version = "0.1.0"
description = "Enterprise PII detection and anonymization API wrapping Microsoft Presidio"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "lingua-language-detector>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-playwright>=0.7",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redakt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# E2E tests are excluded by default — they need Presidio running.
# Run them explicitly: uv run pytest tests/e2e/
# Or with browser visible: uv run pytest tests/e2e/ --headed
addopts = "--ignore=tests/e2e"

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25,<1.0",
    "pytest-playwright>=0.7.2",
]
